--- a/deploy/package.json
+++ b/deploy/package.json
@@ -1,13 +1,14 @@
 {
   "name": "hardhat-project",
-  "scripts":{
-    "deploy":"npx hardhat ignition deploy ./ignition/modules/NewToken.js --network sepolia"
+  "scripts": {
+    "deploy": "npx hardhat ignition deploy ./ignition/modules/NewToken.js --network sepolia"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "hardhat": "^2.22.5"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^5.0.2"
+    "@openzeppelin/contracts": "^5.0.2",
+    "dotenv": "^16.4.5"
   }
 }
