--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "hardhat": "^2.22.5",
+    "driver.js": "^1.3.1",
+    "ethers": "5.7",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18"
